test/types/string/assignToChar/testAssign.7.good
Helpers.chpl:10: In function 'testAssign':
Helpers.chpl:12: error: Cannot assign to int(8) from string
  testAssign.chpl:18: called as testAssign(param strBytes = "hello", type toType = int(8))
